rotas, controller e swagger da company funcionando
